fix float on z-index

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -172,6 +172,7 @@ th {
 }
 
 #directory {
+  z-index: 100;
   position: relative;
   float: right;
   right: 10px;
